Revision history for Dancer2-Plugin-NYTProf

{{$NEXT}}
 [API CHANGE]

 [BUG FIXES]

 [ENHANCEMENTS]

 [MAJOR]

 [MINOR]

 [REVISION]

0.0100 2024-07-02T09:00:41-04:00 America/New_York
 [MINOR]
 - Initial release