@@ -12,6 +12,7 @@ Revision history for Dancer2-Plugin-NYTProf
  [MINOR]
 
  [REVISION]
+ - Dummy-fy the tests, for now.
 
 0.0100 2024-07-02T09:00:41-04:00 America/New_York
  [MINOR]
